--- a/client/sass/main.scss
+++ b/client/sass/main.scss
@@ -311,7 +311,10 @@ ul.dropdown h5 a {
 
     & > .content {
       padding: 5px;
-      padding-top: 15px;
+
+      @media only screen and (min-width: 48em) {
+        padding: 15px;
+      }
 
       ul.disc {
         margin-left: 20px;
