--- a/client/stylesheets/app/feed.css
+++ b/client/stylesheets/app/feed.css
@@ -1981,11 +1981,15 @@ blockquote p {
   border-top: none;
   padding: 0em;
 }
-/* line 507, ../../sass/_components.scss */
+/* line 506, ../../sass/_components.scss */
+.feed .feed-item > .inner .short-comments > .inner .comment {
+  padding: 0.5em;
+}
+/* line 509, ../../sass/_components.scss */
 .feed .feed-item > .inner .short-comments > .inner .comment:last-of-type {
   border-bottom: 2px solid #e84c3d;
 }
-/* line 514, ../../sass/_components.scss */
+/* line 516, ../../sass/_components.scss */
 .feed .feed-item > .inner .comments-notice {
   width: auto;
   margin-left: -0.9375em;
@@ -2010,7 +2014,7 @@ blockquote p {
 .feed .feed-item > .inner .comments-notice:after {
   clear: both;
 }
-/* line 528, ../../sass/_components.scss */
+/* line 530, ../../sass/_components.scss */
 .feed .feed-item > .inner .comments-notice .inner {
   position: relative;
   padding-left: 0.9375em;
@@ -2025,7 +2029,7 @@ blockquote p {
   text-align: center;
   color: white;
 }
-/* line 542, ../../sass/_components.scss */
+/* line 544, ../../sass/_components.scss */
 .feed .feed-item > .inner .feed-comment-form {
   width: auto;
   margin-left: -0.9375em;
@@ -2048,7 +2052,7 @@ blockquote p {
 .feed .feed-item > .inner .feed-comment-form:after {
   clear: both;
 }
-/* line 550, ../../sass/_components.scss */
+/* line 552, ../../sass/_components.scss */
 .feed .feed-item > .inner .feed-comment-form > .inner {
   position: relative;
   padding-left: 0.9375em;
@@ -2063,6 +2067,11 @@ blockquote p {
   border-bottom-right-radius: 1px;
   padding: 0em;
 }
+/* line 561, ../../sass/_components.scss */
+.feed .feed-item > .inner .feed-comment-form > .inner .comment-form > .inner {
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+}
 /* line 17, ../../sass/_components.scss */
 .feed .feed-item.expanded .item-actions a.comments:before {
   background-image: url("/images/down.svg");
@@ -2073,7 +2082,7 @@ blockquote p {
   content: "\00a0\00a0";
   height: 24px;
 }
-/* line 570, ../../sass/_components.scss */
+/* line 577, ../../sass/_components.scss */
 .feed .feed-item.expanded .comments-notice .inner {
   display: inherit;
   cursor: pointer;
@@ -2098,14 +2107,14 @@ blockquote p {
   content: "\00a0\00a0";
   height: 24px;
 }
-/* line 578, ../../sass/_components.scss */
+/* line 585, ../../sass/_components.scss */
 .feed .feed-item.expanded .short-comments .inner {
   height: 100%;
   max-height: 450px;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
-/* line 585, ../../sass/_components.scss */
+/* line 592, ../../sass/_components.scss */
 .feed .feed-item.expanded .feed-comment-form {
   height: 100%;
 }
